fix spacing for nested lists

--- a/src/styles/components/prose.css
+++ b/src/styles/components/prose.css
@@ -80,6 +80,10 @@
     list-style-type: revert;
   }
 
+  :is(ol, ul) :is(ol, ul) {
+    margin-block-start: 0;
+  }
+
   li {
     margin-block-start: theme(spacing.1);
   }
